src/objects/Field_ID_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Field_API_Name__c</fullName>
        <label>Field API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_ID__c</fullName>
        <label>Field ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Label__c</fullName>
        <label>Field Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Field ID Mapping</label>
</CustomObject>